# spinarch

./: .gitignore  README.md
edcipsi/: README.md  pyproject.toml
edcipsi-gen/: pyproject.toml
edcipsi-gen/src/edcipsi-gen/: argparsing.py  cli.py  lattice.py
edcipsi-gen/src/edcipsi_gen/: cipsi.py  create_inputs.py  parse.py  writers.py
edcipsi-gen/src/edcipsi_gen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
edcipsi/src/edcipsi/: __init__.py  argparsing.py  basis.py  cipsi.py  cli.py  config.py  hbuilder.py  io.py  nbkernels.py  observables.py  solver.py  utils.py
test/: greenone.def  greentwo.def  interall.def  modpara.def  namelist.def  run.sh
test/output/: energy.out  greenone.out  greentwo.out  std.out
