[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "edcipsi"
version = "0.1.0"
description = "ED-CIPSI (spin-1/2, HPhi InterAll) solver with optional Numba acceleration"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "numba>=0.59",
]

[project.optional-dependencies]
accel = ["numba>=0.59"]

[project.scripts]
edcipsi = "edcipsi.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/edcipsi"]
